--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -34,14 +34,14 @@
    "source": [
     "import ihor\n",
     "\n",
-    "model = ihor.ModelVDJ.load_model(\"ihor/tests/models/onegene/model_params.txt\",\n",
-    "    \"ihor/tests/models/onegene/model_marginals.txt\",\n",
-    "    \"ihor/tests/models/onegene/V_gene_CDR3_anchors.csv\",\n",
-    "    \"ihor/tests/models/onegene/J_gene_CDR3_anchors.csv\")\n",
+    "model = ihor.ModelVDJ.load_model(\"tests/models/onegene/model_params.txt\",\n",
+    "    \"tests/models/onegene/model_marginals.txt\",\n",
+    "    \"tests/models/onegene/V_gene_CDR3_anchors.csv\",\n",
+    "    \"tests/models/onegene/J_gene_CDR3_anchors.csv\")\n",
     "\n",
     "align_params = ihor.AlignmentParameters(min_score_v= 40, min_score_j= 10, max_error_d=20)\n",
     "\n",
-    "df = read_fasta('ihor/tests/models/seq_onegene.txt')\n",
+    "df = read_fasta('tests/models/seq_onegene.txt')\n",
     "\n",
     "seq = []\n",
     "\n",
@@ -54,51 +54,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "45751caf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(-2, 5)"
+       "0       nodel_noins\n",
+       "1      pal_ins_v, 2\n",
+       "2     pal_ins_d5, 1\n",
+       "3     pal_ins_d3, 1\n",
+       "4      pal_ins_j, 2\n",
+       "5          del_v, 4\n",
+       "6         del_d5, 3\n",
+       "7         del_d3, 1\n",
+       "8          del_j, 5\n",
+       "9       ins_vd, CCC\n",
+       "10      ins_vd, CCT\n",
+       "11      ins_dj, AAA\n",
+       "Name: name, dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.range_del_v"
+    "df.name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "id": "36e420b9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "28"
+       "0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "infer_params = ihor.InferenceParameters(min_likelihood=1e-20, min_likelihood_error=1e-10)\n",
-    "res = ihor.most_likely_recombinations(5, seq[0],model, infer_params)\n",
-    "res[0][1].d_start_seq"
+    "res = ihor.most_likely_recombinations(5, seq[3],model, infer_params)\n",
+    "res[1][1].deld3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
+   "id": "612ceebc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(4.744677799578172e-11, <EventVDJ at 0x7fa4b42f7710>),\n",
+       " (2.372338899789086e-11, <EventVDJ at 0x7fa4b4349670>),\n",
+       " (1.1861694498945433e-11, <EventVDJ at 0x7fa4b42b6990>),\n",
+       " (1.186169449894543e-11, <EventVDJ at 0x7fa4b42b6b70>),\n",
+       " (1.1861694498945426e-11, <EventVDJ at 0x7fa4b42b6df0>)]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "715bc509",
    "metadata": {},
    "outputs": [],
@@ -116,17 +153,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "e905eeb8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "[<DAlignment at 0x7f822868bab0>,\n",
+       " <DAlignment at 0x7f822868b750>,\n",
+       " <DAlignment at 0x7f822868bc30>]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
