--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -145,8 +145,8 @@
     "    for _ in range(nb_rounds):\n",
     "        features = []\n",
     "        for s in seq:\n",
-    "            features += [ihor.infer_features(s, model, infer_params)]\n",
-    "        new_feat = ihor.FeaturesVDJ.average(features)\n",
+    "            features += [model.infer_features(s, infer_params)]\n",
+    "        new_feat = ihor.vdj.Features.average(features)\n",
     "        model.update(new_feat)\n",
     "    return model"
    ]
@@ -283,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
