Changed the name from ihor to righor

--- a/demo/Examples.ipynb
+++ b/demo/Examples.ipynb
@@ -24,7 +24,7 @@
     }
    ],
    "source": [
-    "import ihor\n",
+    "import righor\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn\n",
     "import pandas as pd\n",
@@ -34,15 +34,15 @@
     "\n",
     "\n",
     "# load the model\n",
-    "model = ihor.vdj.Model.load_model(\"../models/human_T_beta/model_params.txt\",\n",
+    "model = righor.vdj.Model.load_model(\"../models/human_T_beta/model_params.txt\",\n",
     "\"../models/human_T_beta/model_marginals.txt\",\n",
     "\"../models/human_T_beta/V_gene_CDR3_anchors.csv\",\n",
     "\"../models/human_T_beta/J_gene_CDR3_anchors.csv\")\n",
     "\n",
     "\n",
     "# define parameters for the alignment and the inference\n",
-    "align_params = ihor.AlignmentParameters()\n",
-    "infer_params = ihor.InferenceParameters()\n",
+    "align_params = righor.AlignmentParameters()\n",
+    "infer_params = righor.InferenceParameters()\n",
     "\n",
     "# Default parameters favour accuracy rather than speed\n",
     "# generally no need to modify them\n",
