Trying some stuff, maybe will just die

--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -26,16 +26,105 @@
     "os.environ[\"RUST_BACKTRACE\"] = \"1\"\n",
     "\n",
     "# load the model\n",
-    "igor_model = righor.load_model(\"human\", \"trb\")\n",
+    "igor_model = righor.load_model(\"human\", \"igh\")\n",
     "# alternatively, you can load a model from igor files \n",
     "# igor_model = righor.load_model_from_files(params.txt, marginals.txt, anchor_v.csv, anchor_j.csv)\n",
     "\n",
     "# constant error: all sequences have the same number of errors, here no errors\n",
-    "igor_model.error = righor.ErrorParameters.constant_error(0.0)\n",
+    "#igor_model.error = righor.ErrorParameters.constant_error(0.0)\n",
     "# uniform error: the number of error in the sequence is sequence-specific\n",
     "# and inferred using the V gene (useful for sequences that undergo somatic hypermutation)\n",
     "# igor_model.error = righor.ErrorParameters.uniform_error()\n",
     "igor_model.model_type = righor.ModelStructure.VxDJ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "441d47da-1e68-4360-9b24-032c0042c9c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'builtins.InfEvent' object has no attribute 'del_d3'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m ev \u001b[38;5;241m=\u001b[39m igor_model\u001b[38;5;241m.\u001b[39mevaluate(sequences[\u001b[38;5;241m0\u001b[39m])\n\u001b[0;32m----> 2\u001b[0m \u001b[43mev\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbest_event\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdel_d3\u001b[49m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'builtins.InfEvent' object has no attribute 'del_d3'"
+     ]
+    }
+   ],
+   "source": [
+    "ev = igor_model.evaluate(sequences[0])\n",
+    "ev.best_event.del_d3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "050218f9-ee38-4dfc-b595-ecd4e5d8a8be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv(\"../briney_unproductive.csv\")\n",
+    "\n",
+    "sequences =[ (row['junc_nt'],\n",
+    " righor.genes_matching(row['v_gene'], igor_model),\n",
+    " righor.genes_matching(row['j_gene'], igor_model))\n",
+    "  for i, row in df[['junc_nt', 'v_gene', 'j_gene']].iterrows()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5f26952-5b21-4d52-8acf-27113d6d4cf6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b93c5ddce1ec49878d8544d687fc5a2c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), IntProgress(value=0, max=6322), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "29580bfb621e496b86da7ba397675589",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), IntProgress(value=0, max=6322), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "\n",
+    "align_params = righor.AlignmentParameters()\n",
+    "infer_params = righor.InferenceParameters()\n",
+    "\n",
+    "# multiple round of expectation-maximization to infer the model\n",
+    "models = {}\n",
+    "models[0] = igor_model.copy().uniform()\n",
+    "for ii in range(30):\n",
+    "    models[ii+1] = models[ii].copy()\n",
+    "    models[ii+1].infer(sequences,\n",
+    "                       align_params,\n",
+    "                       infer_params)\n"
    ]
   },
   {
